--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 venv/
 
-COS30018 - Intelligent Systems Final Report Coverpage.pdf
+/COS30018 - Intelligent Systems Final Report Coverpage.pdf
 
-COS30018 - Intelligent Systems Weekly Report Coverpage.pdf
+/COS30018 - Intelligent Systems Weekly Report Coverpage.pdf
 
-COS30018_Project_Assignment_OptB_Rubrics.pdf
+/COS30018_Project_Assignment_OptB_Rubrics.pdf
 
