remove unwanted pdf for the repos

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 venv/
 
-/COS30018 - Intelligent Systems Final Report Coverpage.pdf
+/"COS30018 - Intelligent Systems Final Report Coverpage.pdf"
 
 /COS30018 - Intelligent Systems Weekly Report Coverpage.pdf
 
